@startuml CD_03_ClientDettaglio
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EBF5FB
  BorderColor #2471A3
  HeaderBackgroundColor #2471A3
  HeaderFontColor White
}
skinparam package {
  BackgroundColor #F4F6F7
  BorderColor #85929E
}

title Diagramma delle Classi - Dettaglio Package Client

package "client.app" {
  class ApplicazioneClient <<Application>> {
    + start(stage:Stage) : void
    + {static} main(args:String[]) : void
  }
}

package "client.controller" {
  class ControllerAccesso <<FXML Controller, Initializable>> {
    - isRegistrationMode : boolean
    - connessione        : ConnessioneServer
    - serverIp           : String
    - serverPort         : int
    + initialize(...)    : void
    - tryConnect()       : void
    - gestisciMessaggioServer(msg:Messaggio) : void
    - gestisciRispostaLogin(r:RispostaAutenticazione) : void
    - gestisciRispostaRegistrazione(r:RispostaAutenticazione) : void
    - handlePrimary()    : void
    - handleSwitch()     : void
    - vaiAGioco(nomeUtente, conn, waitingMsg, pending) : void
  }

  class ControllerGioco <<FXML Controller>> {
    - nomeUtente         : String
    - connessione        : ConnessioneServer
    - timelineTimer      : Timeline
    - secondiRimanenti   : int
    - tempoInizioSfida   : long
    + init(nomeUtente, conn, waitingMsg) : void
    + consegnaMessaggio(msg:Messaggio)  : void
    - gestisciMessaggioServer(msg)      : void
    - avviaSfida(carico:PayloadSfida)   : void
    - avviaCountdown()                  : void
    - mostraRisultato(r:RisultatoSfida) : void
    - gestisciErroreServer(msg:String)  : void
    - gestisciInvioRisposta()           : void
    - gestisciVisualizzaStorico()       : void
    - gestisciNuovaPartita()            : void
    - mostraAttesa()                    : void
    - mostraGioco()                     : void
    - mostraPannelloRisultato()         : void
  }

  class ControllerStorico <<FXML Controller>> {
    - connessione       : ConnessioneServer
    - stageProprietario : Stage
    - nomeUtente        : String
    + init(nomeUtente, conn, owner, root) : void
    - configuraTabella() : void
    - gestisciMessaggio(msg:Messaggio)   : void
    - gestisciIndietro()                 : void
    - formatOutcome(esito:String)        : String
  }
}

package "client.service" {
  class ConnessioneServer {
    - socket                : Socket
    - out                   : ObjectOutputStream
    - in                    : ObjectInputStream
    - callbackMessaggio     : Consumer<Messaggio>
    - callbackDisconnessione: Runnable
    - connesso              : volatile boolean
    + connetti(host:String, porta:int) : void
    - avviaThreadLettura()             : void
    + invia(msg:Messaggio) : synchronized void
    + disconnetti()        : void
    + isConnesso()         : boolean
    + setMessageCallback(cb:Consumer<Messaggio>) : void
    + setDisconnectCallback(cb:Runnable)         : void
  }
}

package "client.util" {
  class ConfigurazioneClient {
    - props : Properties
    + getServerIp()   : String
    + getServerPort() : int
  }
}

' --- Relazioni ---
ApplicazioneClient ..> ControllerAccesso  : carica login.fxml
ControllerAccesso "1" --> "1" ConnessioneServer  : crea e usa
ControllerAccesso "1" --> "1" ConfigurazioneClient : legge config
ControllerAccesso ..> ControllerGioco    : naviga a (vaiAGioco)

ControllerGioco "1" --> "1" ConnessioneServer : usa
ControllerGioco ..> ControllerStorico : naviga a (storia)
ControllerGioco ..> ControllerAccesso : [torna solo via stage]

ControllerStorico "1" --> "1" ConnessioneServer : usa
ControllerStorico ..> ControllerGioco : naviga a (indietro)

note right of ConnessioneServer
  Inizializza prima l'ObjectOutputStream (con flush) e poi l'ObjectInputStream per evitare deadlock.
  La lettura avviene in un thread daemon separato per non bloccare la chiusura dell'applicazione.
  Usa out.reset() per evitare la memorizzazione in cache dei messaggi inviati.
  Il metodo invia() è synchronized per prevenire accessi concorrenti.
end note

note right of ControllerGioco
  Gestisce il timer di gioco con la Timeline di JavaFX (1 tick al secondo).
  Colora il testo in rosso negli ultimi 10 secondi.
  Utilizza una ConcurrentLinkedQueue temporanea per evitare perdite di messaggi
  durante il passaggio dalla schermata di login a quella di gioco.
end note

note bottom of ControllerStorico
  Colora le righe dello storico in base al risultato (verde per vittoria, rosso per sconfitta, giallo per pareggio).
  Usa espressioni lambda per popolare le colonne della TableView.
end note

@enduml
